add warning and delete dialogs